--- a/tests/config/services.yaml
+++ b/tests/config/services.yaml
@@ -7,8 +7,8 @@ services:
     Symfony\Contracts\Translation\TranslatorInterface:
         class: Kematjaya\URLBundle\Tests\Util\Translator
         
-    Symfony\Component\Security\Csrf\TokenGenerator\TokenGeneratorInterface:
-        class: Symfony\Component\Security\Csrf\TokenGenerator\UriSafeTokenGenerator
+    Symfony\Component\Security\Csrf\CsrfTokenManagerInterface:
+        class: Kematjaya\URLBundle\Tests\Util\CsrfTokenManager
         
     Symfony\Component\Security\Core\Security:
         class: Symfony\Component\Security\Core\Security
