--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,8 @@
         "symfony/twig-bundle": "^4.0|^5.0",
         "doctrine/collections": "^1.6",
         "symfony/yaml": "^4.0|^5.0",
-        "symfony/routing": "^4.0|^5.0"
+        "symfony/routing": "^4.0|^5.0",
+        "symfony/console": "^4.0|^5.0",
+        "kematjaya/user-bundle": "^2.0"
     }
 }
