--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,6 @@
         "symfony/yaml": "^4.0|^5.0",
         "symfony/routing": "^4.0|^5.0",
         "symfony/console": "^4.0|^5.0",
-        "kematjaya/user-bundle": "^2.0|^3.0"
+        "kematjaya/user-bundle": "^2.0|^3.0|^4.0"
     }
 }
