--- a/composer.json
+++ b/composer.json
@@ -20,23 +20,22 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
-        "symfony/var-dumper": "^4.0|^5.0",
-        "symfony/framework-bundle": "^4.0|^5.0",
-        "symfony/browser-kit": "^4.0|^5.0"
+        "symfony/var-dumper": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/framework-bundle": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/browser-kit": "^4.0|^5.0|^6.0|^7.0"
     },
     "require": {
-        "symfony/http-kernel": "^4.0|^5.0",
-        "symfony/dependency-injection": "^4.0|^5.0",
-        "symfony/config": "^4.0|^5.0",
+        "symfony/http-kernel": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/dependency-injection": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/config": "^4.0|^5.0|^6.0|^7.0",
         "symfony/translation-contracts": "^2.3",
         "minwork/array": "^1.13",
-        "symfony/security-csrf": "^4.0|^5.0",
-        "symfony/security-core": "^4.0|^5.0",
-        "symfony/twig-bundle": "^4.0|^5.0",
+        "symfony/security-csrf": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/security-core": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/twig-bundle": "^4.0|^5.0|^6.0|^7.0",
         "doctrine/collections": "^1.6",
-        "symfony/yaml": "^4.0|^5.0",
-        "symfony/routing": "^4.0|^5.0",
-        "symfony/console": "^4.0|^5.0",
-        "kematjaya/user-bundle": "^2.0|^3.0|^4.0"
+        "symfony/yaml": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/routing": "^4.0|^5.0|^6.0|^7.0",
+        "symfony/console": "^4.0|^5.0|^6.0|^7.0"
     }
 }
