--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,6 @@
         "symfony/http-kernel": "^6.0|^7.0",
         "symfony/dependency-injection": "^6.0|^7.0",
         "symfony/config": "^6.0|^7.0",
-        "symfony/translation-contracts": "^3.5",
         "minwork/array": "^1.13",
         "symfony/security-csrf": "^6.0|^7.0",
         "symfony/security-core": "^6.0|^7.0",
@@ -36,6 +35,7 @@
         "doctrine/collections": "^2.2",
         "symfony/yaml": "^6.0|^7.0",
         "symfony/routing": "^6.0|^7.0",
-        "symfony/console": "^6.0|^7.0"
+        "symfony/console": "^6.0|^7.0",
+        "symfony/translation": "^6.0|^7.0"
     }
 }
