--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,14 @@
         "symfony/config": "^6.0|^7.0",
         "minwork/array": "^1.13",
         "symfony/security-csrf": "^6.0|^7.0",
-        "symfony/security-core": "^6.0|^7.0",
         "symfony/twig-bundle": "^6.0|^7.0",
         "doctrine/collections": "^2.2",
         "symfony/yaml": "^6.0|^7.0",
         "symfony/routing": "^6.0|^7.0",
         "symfony/console": "^6.0|^7.0",
-        "symfony/translation": "^6.0|^7.0"
+        "symfony/translation": "^6.0|^7.0",
+        "symfony/security-bundle": "^6.0|^7.0",
+        "symfony/form": "^6.0|^7.0",
+        "symfony/options-resolver": "^6.0|^7.0"
     }
 }
